[package]
name = "dash-create"
description = "Code More, Configure Less: The Smart Way to Start Your Projects."
license-file = "LICENSE"
version = "1.1.2"
authors = ["Kunal Bagaria <kb24x7@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.4.7"
dirs = "5.0.1"
open = "5.0.0"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"

[[bin]]
name = "dash"
path = "src/main.rs"